--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
     </header>
     <div class="circle1"></div>
-    <main>
-        <h1>Sandwich Geeks</h1>
-        <p>Home of the best sandwiches in the world!</p>
-    </main>
+
+    <h1 class="logo">Sandwich Geeks</h1>
+    <p>Home of the best sandwiches in the world!</p>
+
 </body>
 </html>
