--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandwich Geeks</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,10 +25,17 @@
             </div>
         </div>
     </header>
-    <div class="circle1"></div>
+    <div class="circle1">
+        <div>
+            <h1 class="logo">Sandwich<br>Geeks</h1>
+        </div>
+        
 
-    <h1 class="logo">Sandwich Geeks</h1>
-    <p>Home of the best sandwiches in the world!</p>
+    </div>
+
+    <p>Premium range of mouth-watering<br>
+        Exotic Sandwiches
+    </p>
 
 </body>
 </html>
