--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ambience.html">Ambience</a></li>
-                        <li><a href="signup.html">Signup</a></li>
+                        <div class="signup"><li><a href="signup.html">Signup/Login</a></li></div>
                     </ul>
                 </nav>
             </div>
@@ -40,7 +40,6 @@
         </div>
     </div>
 
-    
 
  
 
