--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
         </div>
         <div class="index"><img class="imgclass" src="image.png" alt="">
     </div>
-    <!-- <div class="circle2"></div> -->
     <div class="circle2">
     </div>
 </div>
 
+<div class="button-container">
+    <button class="side-btn">| Location</button>
+    <button class="top-products-btn">| Top Products</button>
+    <button class="side-btn">| Contact Us</button>
+</div>
 
-    
 
  
 
