--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
     <button class="top-products-btn">| Top Products</button>
     <button class="side-btn">| Contact Us</button>
 </div>
+<hr class="rule1">
+
+<section class="abt">
+    <div class="about-us">
+        <hr class="rule2">
+        <h1 class="abt-heading">About Us</h1>
+        <hr class="rule3">
+    </div>
+</section>
+<p class="abt-para">Welcome to <span style="font-family: Sedgwick Ave; color: #ff7023;">Sandwich Geeks</span>, where every sandwich tells a story! We believe in<br> transforming fresh, high-quality ingredients into sandwiches that satisfy and surprise.<br> From the crispy crust of freshly baked bread to the savory layers of carefully sourced<br> meats, cheeses, and seasonal produce, each bite delivers a burst<br>
+    of flavor that’s sure to bring a smile.</p>
+
+<p class="abt-para" style="padding-top: 16vh;">Founded with a passion for food and a love for community, <span style="font-family: Sedgwick Ave; color: #ff7023;">Sandwich Geeks</span> is a place<br> for everyone—whether you’re looking for a quick lunch, a cozy family meal,<br> or a new local favorite. Our Geeks take pride in making each sandwich with care, <br>drawing from classic recipes and innovative flavor combinations. We aim to create an<br> experience that’s not just about the food but about the warmth and enjoyment <br>that good food can bring.</p>
+
+<div class="sideangle-img"><img class="sideangle-class" src="Sideangle.webp"></div>
 
 
 </body>
