--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="ambience.html">Ambience</a></li>
+                        <li><a href="profile.html">Profile</a></li>
                         <div class="signup"><li class="fourth"><a href="signup.html">Signup/Login</a></li></div>
                     </ul>
                 </nav>
