--- a/index.html
+++ b/index.html
@@ -133,5 +133,48 @@
 <p class="title4">Java Chip Frappe</p>
 
 
+<section class="customer-feedback">
+    <div class="feedback-container">
+        <hr class="rule10">
+        <h1 class="feedback-heading">Customer Feedbacks</h1>
+        <hr class="rule11">
+    </div>
+</section>
+
+
+<div class="testimonial-section">
+    <div class="feedback-box">
+      <p class="feedback-text">“Absolutely love the Paneer Achari! Tangy, spicy, and so fresh.”</p>
+      <p class="user-name">– Aarya S.</p>
+    </div>
+  
+    <div class="feedback-box">
+      <p class="feedback-text">“Cafe Mocha was heavenly. It’s my new comfort drink!”</p>
+      <p class="user-name">– Raghav M.</p>
+    </div>
+  
+    <div class="feedback-box">
+      <p class="feedback-text">“Super chill place and the Java Chip Frappe is unbeatable.”</p>
+      <p class="user-name">– Neha P.</p>
+    </div>
+  
+    <div class="feedback-box">
+      <p class="feedback-text">“The ambience is warm and welcoming. Feels like my second home!”</p>
+      <p class="user-name">– Devansh K.</p>
+    </div>
+    
+    <div class="feedback-box">
+        <p class="feedback-text">“I come here every weekend. The Paneer Achari is a must-try!”</p>
+        <p class="user-name">– Aarav S.</p>
+    </div>
+    
+    <div class="feedback-box">
+        <p class="feedback-text">“Affordable, delicious, and served with a smile. Love this place!””</p>
+        <p class="user-name">– Riya K.</p>
+    </div>
+  </div>
+  
+
+
 </body>
 </html>
