--- a/index.html
+++ b/index.html
@@ -176,5 +176,32 @@
   </div>
   
 
+<section class="special-offers">
+    <div class="offers-container">
+        <hr class="rule12">
+        <h1 class="offers-heading">Special Offers</h1>
+        <hr class="rule13">
+    </div>
+</section>
+
+<div class="offer-section">
+    <div class="offer-box">
+      <p class="offer-text">🔥 Buy 1 Get 1 Free on all sandwiches every Tuesday! <span class="badge">Limited Time</span></p>
+    </div>
+  
+    <div class="offer-box">
+      <p class="offer-text">🧡 20% off on your first order when you sign up for our newsletter!</p>
+    </div>
+  
+    <div class="offer-box">
+      <p class="offer-text">⏰ Happy Hour: 50% off on all beverages from 3 PM to 5 PM!</p>
+    </div>
+  
+    <div class="offer-box">
+      <p class="offer-text">🍨 Free dessert with every sandwich order on weekends!</p>
+    </div>
+  </div>
+  
+
 </body>
 </html>
