--- a/index.html
+++ b/index.html
@@ -176,15 +176,16 @@
   </div>
   
 
-<section class="special-offers">
-    <div class="offers-container">
-        <hr class="rule12">
-        <h1 class="offers-heading">Special Offers</h1>
-        <hr class="rule13">
-    </div>
-</section>
+
 
 <div class="offer-section">
+    <section class="special-offers">
+        <div class="offers-container">
+            <hr class="rule12">
+            <h1 class="offers-heading">Special Offers</h1>
+            <hr class="rule13">
+        </div>
+    </section>
     <div class="offer-box">
       <p class="offer-text">🔥 Buy 1 Get 1 Free on all sandwiches every Tuesday! <span class="badge">Limited Time</span></p>
     </div>
@@ -202,6 +203,20 @@
     </div>
   </div>
   
-
+  <section class="newsletter-box">
+    <h1 class="newsletter-heading">Join our Newsletter</h1>
+    <p class="newsletter-paragraph">Get tasty updates, fresh offers, and geeky deals straight to your inbox.</p>
+    <form class="newsletter-form">
+    <input type="text" placeholder="Enter your name" required />
+    <input type="email" placeholder="Enter your email" required />
+    <button type="submit">Subscribe</button>
+    </form>
+  </section>
+  
+  
+  
+  
+  
+  
 </body>
 </html>
