--- a/index.html
+++ b/index.html
@@ -203,15 +203,27 @@
     </div>
   </div>
   
-  <section class="newsletter-box">
-    <h1 class="newsletter-heading">Join our Newsletter</h1>
-    <p class="newsletter-paragraph">Get tasty updates, fresh offers, and geeky deals straight to your inbox.</p>
-    <form class="newsletter-form">
-    <input type="text" placeholder="Enter your name" required />
-    <input type="email" placeholder="Enter your email" required />
-    <button type="submit">Subscribe</button>
-    </form>
+
+  <section class="feedback-section-new">
+
+        <div class="feedback-container-new">
+            <hr class="rule14">
+            <h1 class="feedback-heading-new">We Value Your Feedback</h1>
+            <hr class="rule15">
+        </div>
+
+  
+    <div class="feedback-card-new">
+      <form class="feedback-form-new">
+        <p class="feedback-desc-new">Tell us what made you smile or what could be tastier – we’re all ears!</p>
+        <input type="text" placeholder="➤  Your Name" required />
+        <input type="email" placeholder="➤  Your Email" required />
+        <textarea rows="4" placeholder="➤  Your Feedback..." required></textarea>
+        <button type="submit">Send Feedback</button>
+      </form>
+    </div>
   </section>
+  
   
   
   
