--- a/index.html
+++ b/index.html
@@ -244,8 +244,66 @@
   
   
   
+ <!-- Newsletter Section -->
+<section class="newsletter-footer">
+    <div class="newsletter-content">
+      <h2>Subscribe to our Newsletter</h2>
+      <p>From crunchy bites to byte-sized updates—our newsletter serves up sizzling offers,<br> tasty surprises, and the freshest sandwich stories straight to your inbox!</p>
+      <form class="subscribe-form">
+        <input type="email" placeholder="Enter Your Email" required />
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
   
+    <hr />
   
+    <div class="footer-links">
+      <div class="brand">
+        <h3>S△LT</h3>
+        <div class="social-icons">
+          <i class="fab fa-discord"></i>
+          <i class="fab fa-telegram-plane"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-linkedin-in"></i>
+        </div>
+      </div>
+  
+      <div class="link-group">
+        <h4>Products</h4>
+        <ul>
+          <li>Home</li>
+          <li>Business Loans</li>
+          <li>Personal Loans</li>
+          <li>Features</li>
+          <li>Stabilisation</li>
+        </ul>
+      </div>
+  
+      <div class="link-group">
+        <h4>About SALT</h4>
+        <ul>
+          <li>Company</li>
+          <li>Careers</li>
+          <li>Media Kit</li>
+          <li>Authorized Partner</li>
+        </ul>
+      </div>
+  
+      <div class="link-group">
+        <h4>Resources</h4>
+        <ul>
+          <li>Blog</li>
+          <li>UNSALTED Podcast</li>
+          <li>Update & FAQs</li>
+          <li>Licenses</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  
+
   
   
 </body>
