--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
               <li><a href="#topproducts">Top Products</a></li>
               <li><a href="#customer-feedbacks">Reviews</a></li>
               <li><a href="#offers">Offers</a></li>
+              <li><a href="#location">Location</a></li>
             </ul>
           </div>
           
@@ -286,6 +287,7 @@
               <li><a href="#menu">Menu</a></li>
               <li><a href="#newsletter">Newsletter</a></li>
               <li><a href="#account">Account</a></li>
+              <li><a href="contactus">Contact Us</a></li>
             </ul>
           </div>
           
