--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ambience.html">Ambience</a></li>
                         <li><a href="signup.html">Login/Signup</a></li>
-                        <!-- <div class="login"><li class="fourth"><a href="login.html">Login</a></li></div> -->
                     </ul>
                 </nav>
             </div>
@@ -245,7 +244,7 @@
   
   
   
- <!-- Newsletter Section -->
+
 <section class="newsletter-footer">
     <div class="newsletter-content" id="newsletter">
       <h2>Subscribe to our Newsletter</h2>
@@ -313,7 +312,7 @@
 <footer>
     <div class="footer-bottom-bar">
         <p class="p1">An Exotic Sandwich Brand <br></p>
-        <p class="p2">Copyright © 2025 All rights reserved. Made with ♡ in Pune.</p>
+        <p class="p2">Copyright © 2025 All rights reserved. Made with ♡ by Krish.</p>
     </div>
 </footer>
   
