--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href=#aboutus>About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ambience.html">Ambience</a></li>
-                        <li><a href="signup.html">Login/Signup</a></li>
+                        <li><a href="signup.html">Signup</a></li>
                     </ul>
                 </nav>
             </div>
