--- a/signup.html
+++ b/signup.html
@@ -85,10 +85,10 @@
             <div class="link-group1">
                 <h3>Our Brand:</h3>
                 <ul class="our-brand">
-                  <li><a href="#aboutus">About Us</a></li>
-                  <li><a href="#topproducts">Top Products</a></li>
-                  <li><a href="#customer-feedbacks">Reviews</a></li>
-                  <li><a href="#offers">Offers</a></li>
+                  <li><a href="index.html#aboutus">About Us</a></li>
+                  <li><a href="index.html#topproducts">Top Products</a></li>
+                  <li><a href="index.html#customer-feedbacks">Reviews</a></li>
+                  <li><a href="index.html#offers">Offers</a></li>
                   <li><a href="#location">Location</a></li>
                 </ul>
               </div>
@@ -99,7 +99,7 @@
                   <li><a href="#ambience">Ambience</a></li>
                   <li><a href="#menu">Menu</a></li>
                   <li><a href="#newsletter">Newsletter</a></li>
-                  <li><a href="#account">Account</a></li>
+                  <li><a href="signin.html">Account</a></li>
                   <li><a href="contactus">Contact Us</a></li>
                 </ul>
               </div>
