--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <li><a href="#ambience">Ambience</a></li>
               <li><a href="#menu">Menu</a></li>
               <li><a href="#newsletter">Newsletter</a></li>
-              <li><a href="#account">Account</a></li>
+              <li><a href="signin.html">Account</a></li>
               <li><a href="contactus">Contact Us</a></li>
             </ul>
           </div>
