--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href=#aboutus>About Us</a></li>
+                        <li><a href="index.html#aboutus">About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ambience.html">Ambience</a></li>
                         <li><a href="signup.html">Signup</a></li>
