--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap" rel="stylesheet">
+    
    
 </head>
 <body>
@@ -125,6 +126,15 @@
             <p class="p2">Copyright © 2025 All rights reserved. Made with ♡ by Krish.</p>
         </div>
     </footer>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.0/dist/vanilla-tilt.min.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelector(".signin-card"), {
+          max: 6,
+          speed: 100,
+          glare: true,
+          "max-glare": 0.2,
+        });
+      </script>
+      
 </body>
 </html>
