--- a/signup.html
+++ b/signup.html
@@ -130,5 +130,15 @@
         </div>
     </footer>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.0/dist/vanilla-tilt.min.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelector(".signup-card"), {
+          max: 6,
+          speed: 100,
+          glare: true,
+          "max-glare": 0.2,
+        });
+      </script>
+
 </body>
 </html>
