Location & Contact Page

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <li><a href="#topproducts">Top Products</a></li>
               <li><a href="#customer-feedbacks">Reviews</a></li>
               <li><a href="#offers">Offers</a></li>
-              <li><a href="#location">Location</a></li>
+              <li><a href="locationcontact.html">Location</a></li>
             </ul>
           </div>
           
@@ -286,7 +286,7 @@
               <li><a href="#menu">Menu</a></li>
               <li><a href="#newsletter">Newsletter</a></li>
               <li><a href="signin.html">Account</a></li>
-              <li><a href="contactus">Contact Us</a></li>
+              <li><a href="locationcontact.html">Contact Us</a></li>
             </ul>
           </div>
           
