--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
                   <li><a href="index.html#topproducts">Top Products</a></li>
                   <li><a href="index.html#customer-feedbacks">Reviews</a></li>
                   <li><a href="index.html#offers">Offers</a></li>
-                  <li><a href="#location">Location</a></li>
+                  <li><a href="locationcontact.html">Location</a></li>
                 </ul>
               </div>
               
@@ -100,7 +100,7 @@
                   <li><a href="#menu">Menu</a></li>
                   <li><a href="#newsletter">Newsletter</a></li>
                   <li><a href="signin.html">Account</a></li>
-                  <li><a href="contactus">Contact Us</a></li>
+                  <li><a href="locationcontact.html">Contact Us</a></li>
                 </ul>
               </div>
               
