--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 </div>
 
 <div class="button-container">
-    <button class="side-btn">| Location</button>
+    <a href="locationcontact.html"><button class="side-btn">| Location</button></a>
     <a href=#topproducts><button class="top-products-btn">| Top Products</button></a>
-    <button class="side-btn">| Contact Us</button>
+    <a href="locationcontact.html"><button class="side-btn">| Contact Us</button></a>
 </div>
 <hr class="rule1">
 
