--- a/locationcontact.html
+++ b/locationcontact.html
@@ -34,7 +34,7 @@
           <!-- Location Card -->
           <div class="location-card">
             <h2>Location:</h2>
-            <p> <i class="fas fa-map-marker-alt"></i>
+            <p style="margin-left: -2.8vw;"> <i class="fas fa-map-marker-alt"></i>
              Shop 42, Food Galaxy,  <br> </p>
         <p style="margin-left: -1.5vw;">    Sector Sizzle, Layer 3,  <br></p>
     <p style="margin-left: -3vw;">   Breadverse Central,  <br></p>
