--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" id="homepage">
             <div class="glass-card">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href=#homepage>Home</a></li>
                         <li><a href=#aboutus>About Us</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="ambience.html">Ambience</a></li>
