--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
         <h2 class="section-title">MEET THE GRILLS</h2>
         <div class="menu-row">
           <div class="menu-card">
-            <img src="bombay-grill.jpg" alt="Bombay Grill">
+            <img src="menuuu1.png" alt="Bombay Grill">
             <p class="item-name">|Bombay Grill</p>
             <p class="item-price">$30</p>
             <button class="add-btn">Add</button>
