--- a/menu.html
+++ b/menu.html
@@ -47,19 +47,19 @@
         <div class="menu-row">
           <div class="menu-card">
             <img src="menuuu1.png" alt="Bombay Grill">
-            <p class="item-name">|Bombay Grill</p>
+            <p class="item-name">| Bombay Grill</p>
             <p class="item-price">$30</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="delhi-tikki.jpg" alt="Delhi Tikki">
-            <p class="item-name">|Delhi Tikki</p>
+            <img src="menuuu2.png" alt="Delhi Tikki">
+            <p class="item-name">| Delhi Tikki</p>
             <p class="item-price">$30</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="cheese-melt.jpg" alt="Cheese Melt">
-            <p class="item-name">|Cheese Melt</p>
+            <img src="menuuu3.png" alt="Cheese Melt">
+            <p class="item-name">| Cheese Melt</p>
             <p class="item-price">$30</p>
             <button class="add-btn">Add</button>
           </div>
@@ -68,20 +68,20 @@
         <h2 class="section-title">GEEK CRAFTED</h2>
         <div class="menu-row">
           <div class="menu-card">
-            <img src="chilli-cheese.jpg" alt="Chilli Cheese">
-            <p class="item-name">|Chilli Cheese</p>
+            <img src="menuuu4.png" alt="Chilli Cheese">
+            <p class="item-name">| Chilli Cheese</p>
             <p class="item-price">$45</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="paneer-achari.jpg" alt="Paneer Achari">
-            <p class="item-name">|Paneer Achari</p>
+            <img src="menuuu5.png" alt="Paneer Achari">
+            <p class="item-name">| Paneer Achari</p>
             <p class="item-price">$60</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="crunchy-mexican.jpg" alt="Crunchy Mexican">
-            <p class="item-name">|Crunchy Mexican</p>
+            <img src="menuuu6.png" alt="Crunchy Mexican">
+            <p class="item-name">| Crunchy Mexican</p>
             <p class="item-price">$60</p>
             <button class="add-btn">Add</button>
           </div>
