--- a/menu.html
+++ b/menu.html
@@ -86,6 +86,74 @@
             <button class="add-btn">Add</button>
           </div>
         </div>
+
+        <h2 class="section-title">The Cravers</h2>
+        <div class="menu-row">
+          <div class="menu-card">
+            <img src="craver1.avif" alt="Tandoori Paneer Craver">
+            <p class="item-name">| Tandoori Paneer Craver</p>
+            <p class="item-price">$45</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="craver2.avif" alt="Classic Veggie Craver">
+            <p class="item-name">| Classic Veggie Craver</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="craver3.avif" alt="Soya Roll Craver">
+            <p class="item-name">| Soya Roll Craver</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+        </div>
+
+        <h2 class="section-title">Veg Salads</h2>
+        <div class="menu-row">
+          <div class="menu-card">
+            <img src="salad1.avif" alt="Paneer Tikka Salad">
+            <p class="item-name">| Paneer Tikka Salad</p>
+            <p class="item-price">$45</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="salad2.avif" alt="Veggie Delite Salad">
+            <p class="item-name">| Veggie Delite Salad</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="salad3.avif" alt="Aloo Patty Salad">
+            <p class="item-name">| Aloo Patty Salad</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+        </div>
+
+        <h2 class="section-title">Veg Salads</h2>
+        <div class="menu-row">
+          <div class="menu-card">
+            <img src="salad1.avif" alt="Paneer Tikka Salad">
+            <p class="item-name">| Paneer Tikka Salad</p>
+            <p class="item-price">$45</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="salad2.avif" alt="Veggie Delite Salad">
+            <p class="item-name">| Veggie Delite Salad</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+          <div class="menu-card">
+            <img src="salad3.avif" alt="Aloo Patty Salad">
+            <p class="item-name">| Aloo Patty Salad</p>
+            <p class="item-price">$60</p>
+            <button class="add-btn">Add</button>
+          </div>
+        </div>
+
+
       </section>
       
 
