--- a/menu.html
+++ b/menu.html
@@ -109,23 +109,25 @@
           </div>
         </div>
 
-        <h2 class="section-title">Veg Salads</h2>
+        
+
+        <h2 class="section-title">Signature Wraps</h2>
         <div class="menu-row">
           <div class="menu-card">
-            <img src="salad1.avif" alt="Paneer Tikka Salad">
-            <p class="item-name">| Paneer Tikka Salad</p>
+            <img src="wrap1.JPG" alt="Paneer Tikka Signature Wrap">
+            <p class="item-name">| Paneer Tikka Signature Wrap</p>
             <p class="item-price">$45</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="salad2.avif" alt="Veggie Delite Salad">
-            <p class="item-name">| Veggie Delite Salad</p>
+            <img src="wrap2.JPG" alt="Corn & Peas Signature Wrap">
+            <p class="item-name">| Corn & Peas Signature Wrap</p>
             <p class="item-price">$60</p>
             <button class="add-btn">Add</button>
           </div>
           <div class="menu-card">
-            <img src="salad3.avif" alt="Aloo Patty Salad">
-            <p class="item-name">| Aloo Patty Salad</p>
+            <img src="wrap3.JPG" alt="Veggie Delite Signature Wrap">
+            <p class="item-name">| Veggie Delite Signature Wrap</p>
             <p class="item-price">$60</p>
             <button class="add-btn">Add</button>
           </div>
@@ -152,8 +154,6 @@
             <button class="add-btn">Add</button>
           </div>
         </div>
-
-
       </section>
       
 
