--- a/locationcontact.html
+++ b/locationcontact.html
@@ -90,18 +90,18 @@
                   <li><a href="index.html#topproducts">Top Products</a></li>
                   <li><a href="index.html#customer-feedbacks">Reviews</a></li>
                   <li><a href="index.html#offers">Offers</a></li>
-                  <li><a href="locationcontact.html">Location</a></li>
+                  <li><a href="#">Location</a></li>
                 </ul>
               </div>
               
               <div class="link-group2">
                 <h3>More:</h3>
                 <ul class="more">
-                  <li><a href="#ambience">Ambience</a></li>
-                  <li><a href="#menu">Menu</a></li>
+                  <li><a href="ambience.html">Ambience</a></li>
+                  <li><a href="menu.html">Menu</a></li>
                   <li><a href="#newsletter">Newsletter</a></li>
                   <li><a href="signin.html">Account</a></li>
-                  <li><a href="locationcontact.html">Contact Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
               
