--- a/signup.html
+++ b/signup.html
@@ -96,8 +96,8 @@
               <div class="link-group2">
                 <h3>More:</h3>
                 <ul class="more">
-                  <li><a href="#ambience">Ambience</a></li>
-                  <li><a href="#menu">Menu</a></li>
+                  <li><a href="ambience.html">Ambience</a></li>
+                  <li><a href="menu.html">Menu</a></li>
                   <li><a href="#newsletter">Newsletter</a></li>
                   <li><a href="signin.html">Account</a></li>
                   <li><a href="locationcontact.html">Contact Us</a></li>
