Converted to React

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     });
   </script>
   
-<div class="sideangle-img"><img class="sideangle-class" src="Sideangle.webp"></div>
+<div class="sideangle-img"><img class="sideangle-class" src="./src/images/Sideangle.webp"/></div>
 
 <section class="tp-section">
     <div class="tp-container" id="topproducts">
