--- a/menu.html
+++ b/menu.html
@@ -338,6 +338,7 @@
             <p class="p1">An Exotic Sandwich Brand <br></p>
             <p class="p2">Copyright © 2025 All rights reserved. Made with ♡ by Krish.</p>
         </div>
+    </footer>
 
 
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.0/dist/vanilla-tilt.min.js"></script>
