--- a/sandwich-geeks-react/index.html
+++ b/sandwich-geeks-react/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" href="/assets/images/image 3.png" />
+    <link rel="icon" href="/assets/images/icon2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sandwich Geeks</title>
   </head>
